# bevyearth

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SATELLITE_TRACKING.md  memory.md  notes.md
assets/shaders/: sky_material.wgsl
docs/: coordinates.md
plans/: code_review.md  footprint_plan.md
src/: cities.rs  coord.rs  coverage.rs  earth.rs  footprint_gizmo.rs  ground_track.rs  ground_track_gizmo.rs  main.rs  raster.rs
src/core/: big_space.rs  coordinates.rs  mod.rs  orbit_camera.rs  space.rs
src/launch_library/: fetcher.rs  mod.rs  systems.rs  types.rs
src/orbital/: coordinates.rs  mod.rs  moon.rs  propagation.rs  time.rs
src/satellite/: components.rs  mod.rs  resources.rs  systems.rs
src/space_weather/: fetcher.rs  mod.rs  systems.rs  types.rs
src/tle/: cache.rs  fetcher.rs  mock_data.rs  mod.rs  parser.rs  systems.rs  types.rs
src/ui/: groups.rs  mod.rs  panels.rs  skybox.rs  state.rs  systems.rs
src/visualization/: arrows.rs  axes.rs  cities.rs  colormaps.rs  config.rs  earth.rs  ground_track_gizmo.rs  heatmap.rs  launches.rs  lighting.rs  mod.rs  moon.rs  sky_material.rs
tests/: ovation_aurora_latest.json
tests/integration/: main.rs
