[package]
name = "bevyearth"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking", "experimental_bevy_feathers", "experimental_bevy_ui_widgets"] }
bevy_feathers = "0.18.0"
bevy_input_focus = "0.18.0"
bevy_panorbit_camera = "0.34.0"
bevy_ui_widgets = "0.18.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Async HTTP + TLS
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Orbit propagation (2.x API)
sgp4 = "2.3.0"
# Utilities
serde = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow = "1"
glam = "0.27"

[dev-dependencies]
approx = "0.5"
# criterion = "0.5"

[features]
dev = ["bevy/bevy_dev_tools"]
dev_camera = []
debug_basic_scene = []
debug_scene_camera = []

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
